--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,8 @@
-application: gdt-follows
-version: 1
-runtime: go
-api_version: go1
-
-handlers:
-- url: /.*
-  script: _go_app
+# application: gdt-follows
+# version: 1
+# runtime: go
+# api_version: go1
+#
+# handlers:
+# - url: /.*
+#   script: _go_app
