--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <groupId>GDT</groupId>
     <artifactId>GDT-FOLLOW</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <distributionManagement>
         <repository>
             <id>central</id>
@@ -18,6 +19,7 @@
           <url>https://gdtfollows.jfrog.io/gdtfollows/libs-snapshot-local</url>
       </snapshotRepository>
     </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
@@ -30,6 +32,39 @@
             <version>1.3.2</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jfrog.buildinfo</groupId>
+                <artifactId>artifactory-maven-plugin</artifactId>
+                <version>2.4.0</version>
+                <inherited>false</inherited>
+                <executions>
+                    <execution>
+                        <id>build-info</id>
+                        <goals>
+                            <goal>publish</goal>
+                        </goals>
+                        <configuration>
+                            <deployProperties>
+                                <gradle>awesome</gradle>
+                                <review.team>qa</review.team>
+                            </deployProperties>
+                            <publisher>
+                                <contextUrl>https://oss.jfrog.org</contextUrl>
+                                <username>${username}</username>
+                                <password>${password}</password>
+                                <repoKey>libs-release-local</repoKey>
+                                <snapshotRepoKey>libs-snapshot-local</snapshotRepoKey>
+                            </publisher>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <repositories>
     <repository>
         <id>central</id>
@@ -46,5 +81,4 @@
         </releases>
     </repository>
 </repositories>
-
 </project>
